changed home page filename to index.html

--- a/registration.html
+++ b/registration.html
@@ -180,7 +180,7 @@
   <header>
     <div class="logo">Bookworm's Catalogue</div>
     <nav>
-      <a href="hmpg.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="catalogue.html">Catalogue</a>
       <a href="#">Registration/Register</a>
       <a href="login_page.html">Login</a>
