--- a/catalogue.html
+++ b/catalogue.html
@@ -126,7 +126,7 @@
   <header>
     <div class="logo">Bookworm's Catalogue</div>
     <nav>
-      <a href="home.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="#">Catalogue</a>
       <a href="registration.html">Registration/Register</a>
       <a href="login_page.html">Login</a>
