--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
 <body>
 
   <header>
-    <div class="logo">Bookworm's Haven</div>
+    <div class="logo"><img src="https://i.ibb.co/x5TLPGQ/BOOKWORM-S-HAVEN.png" width="45px" height="45px">  Bookworm's Haven</div>
     <nav>
       <a href="#">Home</a>
       <a href="catalogue.html">Catalogue</a>
-      <a href="registration.html">Registration/Register</a>
+      <a href="registration.html">Register</a>
       <a href="login_page.html">Login</a>
     </nav>
   </header>
@@ -214,29 +214,21 @@
   </div>
 
   <div class="about">
-    <h2>About Our Online Book Store</h2>
-    <p>
-      Welcome to the Bookworm's Haven – your literary sanctuary in the digital realm! Immerse yourself in a world of captivating stories, insightful knowledge, and boundless imagination. We pride ourselves on being more than just a bookstore; we're a haven for book enthusiasts and knowledge seekers alike.
+    <h2>About Us</h2>
+    <p style="text-align: justify;">
+      Welcome to the Bookworm's Haven – your literary sanctuary in the digital realm! Immerse yourself in a world of captivating stories, insightful knowledge, and boundless imagination. We pride ourselves on being more than just a bookstore;<br><br>
 
       Explore our Diverse Collection:
-      Dive into our extensive catalogue that spans genres from timeless classics to contemporary bestsellers. Whether you're a fan of gripping mysteries, heartwarming romances, or mind-expanding non-fiction, our curated selection guarantees a reading experience for every taste.
-
-      Featured Books That Ignite Your Passion:
-      Discover the latest literary gems with our carefully curated featured books. These handpicked titles promise to transport you to different worlds, introduce you to compelling characters, and keep you hooked from the first page to the last.
+      Dive into our extensive catalogue that spans genres from timeless classics to contemporary bestsellers. Whether you're a fan of gripping mysteries, heartwarming romances, or mind-expanding non-fiction, our curated selection guarantees a reading experience for every taste.<br><br>
 
       A Home for Readers:
-      More than just a marketplace, our Online Book Store is a community for book lovers. Engage in discussions, share your favorite reads, and connect with fellow bibliophiles who share your passion for the written word. Join us in celebrating the magic of storytelling.
+      More than just a marketplace, our Online Book Store is a community for book lovers. Engage in discussions, share your favorite reads, and connect with fellow bibliophiles who share your passion for the written word. Join us in celebrating the magic of storytelling.<br><br>
 
-      Immerse Yourself in Knowledge:
-      Our bookstore is not just about fiction; it's a gateway to a world of knowledge. Explore thought-provoking non-fiction, insightful biographies, and educational resources that empower you to expand your horizons and embrace lifelong learning.
-
-      Customer Reviews:
-      Curious about what others think? Read our customer reviews to get insights and recommendations from fellow readers. Join the conversation and share your thoughts to help others discover their next literary adventure.
-
+      
       Your Personalized Bookstore Experience:
-      Create an account to unlock a personalized shopping experience. Keep track of your reading wishlist, enjoy exclusive discounts, and receive tailored recommendations based on your preferences. Registration is simple, and your literary journey awaits.
+      Create an account to unlock a personalized shopping experience. Keep track of your reading wishlist, enjoy exclusive discounts, and receive tailored recommendations based on your preferences. Registration is simple, and your literary journey awaits.<br><br>
 
-      At the Online Book Store, we believe in the transformative power of books. Whether you're a seasoned reader or just starting your reading journey, we invite you to embark on a captivating adventure with us. Happy reading!
+      
     </p>
   </div>
 
@@ -244,17 +236,31 @@
     <h2>Customer Reviews</h2>
     <div class="customer-review">
       <div class="stars">★★★★★</div>
-      <p>"The Godfather is one of the most gripping crime novels I have ever read."</p>
+      <p>"The Godfather is one of the most gripping crime novels I have ever read."</p><br>
       <p class="customer-name">- Nikhil M</p>
     </div>
+      <div class="stars">★★★★
+      <p>"This website is best suited for all bookworms."</p>
+      <p class="customer-name">- Sandip nayak</p>
+    </div>
+      <div class="stars">★★★★
+      <p>"I loved the layout in which we could easily read our books"</p>
+      <p class="customer-name">- Manjusha</p>
+    </div>
+      <div class="stars">★★★★★
+      <p>"This website got the best collections of books."</p>
+      <p class="customer-name">- Chandu</p>
+    </div>
+  </div>
     <!-- Add more customer reviews as needed -->
   </div>
 
   <footer>
     <div class="footer-nav">
       <a href="#">Home</a>
-      <a href="#">Register</a>
-      <a href="#">Login</a>
+      <a href="catalogue.html">Catalogue</a>
+      <a href="registration.html">Register</a>
+      <a href="login_page.html">Login</a>
     </div>
     <div class="address">
       <p>D.NO 7-186, Rushikonda, near IT Hills, Visakhapatnam, Andhra Pradesh</p>
@@ -264,4 +270,3 @@
 
 </body>
 </html>
-
