--- a/login_page.html
+++ b/login_page.html
@@ -197,8 +197,8 @@
       </div>
 
       <div class="forgot-password">
-        <a href="#"><i class=" flex-container-left"></i> Forgot Password?</a><br>
-        <a href="#"><i class=" flex-container-right"></i> Sign up</a>
+        <a href="forgot_password.html"><i class=" flex-container-left"></i> Forgot Password?</a><br>
+        <a href="registration.html"><i class=" flex-container-right"></i> Sign up</a>
       </div>
     </div>
   </div>
