--- a/registration.html
+++ b/registration.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
   <title>Registration Page</title>
 
   <!-- Bootstrap CSS -->
@@ -182,7 +183,7 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="catalogue.html">Catalogue</a>
-      <a href="#">Registration/Register</a>
+      <a href="#">Register</a>
       <a href="login_page.html">Login</a>
     </nav>
   </header>
@@ -192,11 +193,12 @@
       <h2>Register</h2>
       <form action="#" method="post">
         <div class="form-group">
-          <label for="username">Username</label>
+          
+          <label for="username"><i class="bi bi-person-circle"></i>   Username</label>
           <input type="text" class="form-control" name="username" id="username" placeholder="Username" required>
         </div>
         <div class="form-group">
-          <label for="email">Email</label>
+          <label for="email"><i class="bi bi-envelope-at-fill"></i>   Email</label>
           <input type="email" class="form-control" name="email" id="email" placeholder="Email" required>
         </div>
         <div class="form-group">
@@ -215,11 +217,15 @@
           </div>
         </div>
         <div class="form-group">
-          <label for="phone">Phone Number</label>
+          <label for="phone"><i class="bi bi-telephone-fill"></i>   Phone Number</label>
           <input type="tel" class="form-control" name="phone" id="phone" placeholder="Phone Number" required>
         </div>
         <div class="form-group">
-          <label for="address">Address</label>
+          <label for="file"><i class="bi bi-file-image"></i>   Profile Picture</label>
+          <input type="file" class="form-control" name="file" id="file" placeholder="file" required>
+        </div>
+        <div class="form-group">
+          <label for="address"><i class="bi bi-geo-alt-fill"></i>   Address</label>
           <textarea class="form-control" name="address" id="address" placeholder="Address" rows="3" required></textarea>
         </div>
         <div class="form-group genre">
